--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "enzyme": "^2.8.2",
     "mocha": "^3.3.0",
     "mocha-webpack": "^0.7.0",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
     "react-test-renderer": "^15.5.4",
+    "sinon": "^2.1.0",
+    "sinon-chai": "^2.9.0",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.4"
   },
